Fix responsitivity on small screen

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -50,7 +50,7 @@ body {
 
 .main {
     position: relative;
-    min-height: 100vh;
+    min-height: 145vh;
 }
 
 .container-main-page {
